# bifrost

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  EXECPLAN.md  ISSUE_114_SCALA_USAGE_GRAPH_EXECPLAN.md  LICENSE.md  PLANS.md  README.md  SEARCHTOOLS_CONCURRENCY_EXECPLAN.md  SEARCHTOOLS_PYO3_EXECPLAN.md  SOURCE.md  SUPPLEMENTAL_THIRD_PARTY_NOTICES.txt  THIRD_PARTY_LICENSES.html  about.hbs  about.toml  build.rs  deny.toml  pyproject.toml
.agent/: EXECPLAN_INTELLIJ_PYTHON_FINDUSAGES.md  GET_DEFINITION_REFERENCE_API_EXECPLAN.md  ISSUE_213_GO_STRUCTURAL_TYPE_RELATIONS_EXECPLAN.md  ISSUE_328_SEARCH_AST_EXECPLAN.md  ISSUE_328_SEARCH_AST_REVIEW_EXECPLAN.md  NOT_FOUND_RECOVERY_EXECPLAN.md  PARITY_CROSS_LANGUAGE_GENERALIZATION.md  PLANS.md  cpp-macro-indexing-summary-fallback-execplan.md  dead-code-unused-abstraction-other-languages-execplan.md  dead-code-unused-abstraction-smells-execplan.md  fast-hash-collections-execplan.md  get-definition-module-split-execplan.md  go-usage-graph-execplan.md
.agents/docs/: PARITY_CROSS_LANGUAGE_GENERALIZATION.md  agent-plugin-publication.md  cross-language-duplication-survey.md  dataflow-lifecycle-benchmark-2026-07-24.md  issue-918-code-query-execution-benchmark-2026-07-20.md  issue-918-derived-layer-graph-experiment-2026-07-21.md  issue-918-explain-profile-2026-07-21.md  issue-918-parallel-query-scheduling-2026-07-21.md  pi-bifrost-implementation-explainer.html  reference-differential-runbook.md  scala-trait-inherited-members.md  semantic-artifact-lifecycle-matrix.md  semantic-cfg-lifecycle-benchmark-2026-07-20.md  semantic-oracle-lifecycle-benchmark-2026-07-21.md  sqlite-backed-compact-graph-applicability.md
.agents/plans/: 1082-decompose-language-semantic-lowerers.md  ANALYZER_CLONE_ALLOCATION_EXECPLAN.md  ANALYZER_SQLITE_STORE_EXECPLAN.md  BIFROST_TOOL_CLI_EXECPLAN.md  EXECPLAN.md  EXECPLAN_BROKK_SEARCHTOOLS_SYNC.md  EXECPLAN_INTELLIJ_PYTHON_FINDUSAGES.md  EXECPLAN_SEARCHTOOLS.md  GET_DEFINITION_GO_RESOLVER_EXECPLAN.md  GET_DEFINITION_REFERENCE_API_EXECPLAN.md  ISSUE_170_BENCHMARK_HARNESS_EXECPLAN.md  ISSUE_184_RUST_DEAD_CODE_EXECPLAN.md  ISSUE_192_ANALYZER_BACKED_RESOLVER_EXECPLAN.md  ISSUE_193_GET_DEFINITION_EXECPLAN.md  ISSUE_206_RUST_DEFINITION_RESOLVER_EXECPLAN.md  ISSUE_222_OBVIOUS_MEMBER_FLOWS_EXECPLAN.md  ISSUE_393_RECEIVER_FACTS_EXECPLAN.md  ISSUE_394_OBJECT_SENSITIVE_RECEIVER_EXECPLAN.md  ISSUE_409_411_RUBY_AUTOLOAD_MODULE_FUNCTION_EXECPLAN.md  ISSUE_420_421_SCALA_IMPORT_EXTENSION_EXECPLAN.md  ISSUE_73_EXECPLAN.md  LOCAL_USAGE_INFERENCE_EXECPLAN.md  MCP_ABSOLUTE_PATHS_EXECPLAN.md  MCP_PYTHON_RENDERING_EXECPLAN.md  MCP_SERVER_SPLIT_EXECPLAN.md  MOST_RELEVANT_FILES_EXECPLAN.md  PYTHON_USAGE_GRAPH_PARITY_EXECPLAN.md  SEARCHTOOLS_CONCURRENCY_EXECPLAN.md  SEARCHTOOLS_MCP_EXECPLAN.md  SEARCHTOOLS_PYO3_EXECPLAN.md  SEMANTIC_ACCELERATION_EXECPLAN.md  STRUCTURAL_CLONE_MULTI_LANGUAGE_EXECPLAN.md  SUMMARIZE_SYMBOLS_SEARCHTOOLS_EXECPLAN.md  all-language-cfg-icfg-rollout.md  analyzer-borrowed-views-execplan.md  analyzer-persistence-pipeline.md  authoritative-scan-usages-path-scope.md  bare-filename-repair-execplan.md  calibrate-usage-reference-weights.md  (+94 more)
.cargo/: config.toml
.cursor-plugin/: marketplace.json
benchmark/: README.md  targets.toml
bifrost_searchtools/: README.md  __init__.py  client.py  models.py
docs/: README.md  astro.config.mjs  execplan-patch-symbol-effects.md  package-lock.json  package.json  rehype-base-path-links.mjs
examples/: README.md  searchtools_demo.py  validate_published_wheel.sh
licenses/: SUPPLEMENTAL_THIRD_PARTY_NOTICES.txt  THIRD_PARTY_LICENSES.html
python_tests/: test_searchtools_client.py
scripts/: announce-discord-release.sh  check-codex-plugin-manifest.mjs  check-crate-package.sh  check-release-version.mjs  check-release-version.test.mjs  generate-amp-skill-bundle.mjs  generate-codex-skill-bundle.mjs  generate-rust-third-party-notices.sh  generate-supplemental-third-party-notices.mjs  optimize_onnx_attention.py  prepare-vscode-extension-manifest.mjs  prepare-vscode-license-artifacts.mjs  regenerate-csharp-external-fixture.sh  release-version.mjs  release-version.test.mjs  resolve-docs-version.mjs  resolve-release-tag.sh  run-dataflow-lifecycle-benchmarks.sh  run-semantic-cfg-benchmarks.sh  run-semantic-oracle-benchmarks.sh  smoke-agent-plugin-release.mjs  sync-release-version.mjs  verify-csharp-external-fixture.sh  voyage_sidecar.py
src/: cache_db.rs  cache_gc.rs  cancellation.rs  code_quality.rs  commit_analysis.rs  compact_graph.rs  file_tools.rs  get_summaries_output.rs  git_tools.rs  gitblob.rs  lib.rs  mcp_cli.rs  mcp_common.rs  mcp_core.rs  mcp_extended.rs  mcp_nlp.rs  mcp_registry.rs  mcp_server.rs  mcp_slopcop.rs  navigation.rs  path_utils.rs  project_watcher.rs  python_module.rs  relevance.rs  searchtools.rs  searchtools_render.rs  searchtools_service.rs  symbol_rename.rs  text_utils.rs  tool_arguments.rs
tests/: analyzer_capability_parity.rs  analyzer_persistence.rs  analyzer_sql_query_parity.rs  analyzer_store_reconcile.rs  benchmark_compare.rs  benchmark_manifest.rs  benchmark_repo_cache.rs  benchmark_workflow_policy.rs  bifrost_benchmark_cli.rs  bifrost_benchmark_run.rs  bifrost_lsp_server.rs  bifrost_mcp_server.rs  bifrost_policy_cli.rs  bifrost_reference_differential_cli.rs  bifrost_tool_cli.rs  binary_file_handling.rs  clangd_find_references.rs  clangd_goto_definition.rs  classify_test_files_test.rs  code_query_cpp_receiver.rs  code_query_docs.rs  code_query_pipelines.rs  code_query_public_api.rs  code_query_tutorials.rs  commit_analysis_test.rs  cpp_analyzer_test.rs  cpp_macro_call_arity.rs  cpp_structural_clone_smells.rs  cpp_test_assertion_smells.rs  cpp_type_hierarchy_test.rs  cross_language_attribute_target_declarations.rs  cross_language_import_hits.rs  cross_language_receiver_definition.rs  cross_language_return_type_definition.rs  cross_language_self_usages.rs  csharp_analyzer_test.rs  csharp_analyzer_update_test.rs  csharp_bounded_receiver_hardening.rs  csharp_dead_code_smells.rs  csharp_go_rust_test_assertion_smells.rs  (+184 more)
(+635 files in other folders)
