[package]
name = "brokk-bifrost"
# Single source of truth for both the crate and the Python wheel. The Python
# package (`brokk-bifrost-searchtools`) inherits this version via maturin's
# `dynamic = ["version"]` in pyproject.toml — keep it here, nowhere else.
version = "0.6.6"
edition = "2024"
description = "Tree-sitter-backed multi-language code analyzer with bundled LSP and MCP search-tool servers. Powers Brokk's `bifrost` binary."
license = "LGPL-3.0-or-later"
repository = "https://github.com/BrokkAi/bifrost"
homepage = "https://github.com/BrokkAi/bifrost"
readme = "README.md"
keywords = ["analyzer", "tree-sitter", "lsp", "mcp", "code-analysis"]
categories = ["development-tools", "parser-implementations", "command-line-utilities"]

[lib]
name = "brokk_bifrost"
crate-type = ["rlib", "cdylib"]

[dependencies]
bincode = "1.3.3"
# NLP / semantic_search stack. `gte-rs` (lib name `gte`) pins `ort = =2.0.0-rc.9`;
# our direct `ort` dep must stay on the exact same rc so the `nlp-gpu` feature can
# toggle execution providers without a version split.
gte-rs = { version = "0.9.1", optional = true }
hf-hub = { version = "0.4", default-features = false, features = ["ureq"], optional = true }
orp = { version = "0.9.2", optional = true }
ort = { version = "=2.0.0-rc.9", features = ["load-dynamic"], optional = true }
# ort rc.9 accepts any newer ort-sys rc, but rc.10+ build scripts no longer
# compile against current `ureq`; pin the matching rc explicitly.
ort-sys = { version = "=2.0.0-rc.9", optional = true }
tokenizers = { version = "0.21", optional = true }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
git2 = { version = "0.20.2", default-features = false }
glob = "0.3.3"
ignore = "0.4.24"
indicatif = "0.18.0"
lsp-server = "0.7"
lsp-types = "0.97"
moka = { version = "0.12.11", features = ["sync"] }
notify = "6.1.1"
once_cell = "1.21.3"
pyo3 = { version = "0.23.5", features = ["abi3-py312", "extension-module"], optional = true }
rayon = "1.10.0"
regex = "1.12.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rustc-hash = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.8"
toml = "0.8.23"

# Tree-sitter policy:
# - keep one shared runtime version
# - pin each grammar crate to a known-compatible upstream release
# - grammar crate versions are intentionally not forced to match numerically,
#   because the upstream language crates are released independently
tree-sitter = "0.25.10"

# Grammars already on the current 0.25 line.
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-scala = "0.25.0"

# Grammars that still need older published releases for this port.
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-php = "0.23.11"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"
quick-xml = "0.40"
jaq-core = "3.0"
jaq-std = "3.0"
jaq-json = "2.0"
xee-xpath = "0.1.5"
xot = "0.31"

[features]
default = []
# Semantic search (embeddings + reranking via ONNX). Opt in with
# `--features nlp` on targets where onnxruntime is available.
nlp = ["dep:gte-rs", "dep:hf-hub", "dep:orp", "dep:ort", "dep:ort-sys", "dep:tokenizers"]
# Adds the CUDA execution provider; falls back to CPU at runtime if unavailable.
nlp-gpu = ["nlp", "ort/cuda"]
# Adds the CoreML execution provider for Apple platforms; falls back to CPU at runtime if unavailable.
nlp-coreml = ["nlp", "ort/coreml", "orp/coreml"]
# Enables the pyo3-backed Python extension module (`bifrost_searchtools._native`).
# Maturin turns this on automatically via pyproject.toml; the `bifrost` CLI
# binary builds without it on every platform.
python = ["dep:pyo3"]

[dev-dependencies]
filetime = "0.2"
pretty_assertions = "1.4.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tempfile = "3.23.0"

# Only the Unix peak-RSS benchmark (getrusage) needs libc.
[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"
