[package]
name = "brokk-bifrost"
# Single source of truth for both the crate and the Python wheel. The Python
# package (`brokk-bifrost-searchtools`) inherits this version via maturin's
# `dynamic = ["version"]` in pyproject.toml — keep it here, nowhere else.
version = "0.8.4"
edition = "2024"
description = "Tree-sitter-backed multi-language code analyzer with bundled LSP and MCP search-tool servers. Powers Brokk's `bifrost` binary."
license = "LGPL-3.0-or-later"
repository = "https://github.com/BrokkAi/bifrost"
homepage = "https://github.com/BrokkAi/bifrost"
readme = "README.md"
keywords = ["analyzer", "tree-sitter", "lsp", "mcp", "code-analysis"]
categories = ["development-tools", "parser-implementations", "command-line-utilities"]

[lib]
name = "brokk_bifrost"
crate-type = ["rlib", "cdylib"]

[dependencies]
bincode = "1.3.3"
# NLP / semantic_search stack. The embedder is voyageai/voyage-4-nano
# (Qwen3-bidirectional), served by the PyTorch SDPA sidecar (one process per device,
# fused attention on CUDA/Metal/CPU) — see `nlp/voyage_sidecar.rs` and
# `scripts/voyage_sidecar.py`. Rust keeps the pipeline; only the GPU forward is Python.
hf-hub = { version = "0.4", default-features = false, features = ["ureq"], optional = true }
tokenizers = { version = "0.21", optional = true }
# 8-bit rotational quantization for the searchable composed vectors (~4x smaller
# blobs + a branch-free u8 scan).
fastrq = { version = "0.2.0", optional = true }
# Scalable Bloom filter for GC reachability: a few MB even for a monorepo's full object
# set, and sized proportionally (~KB for a small repo). Grows to hold an unknown number
# of OIDs while holding the target false-positive rate.
growable-bloom-filter = "2.1"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
csv = "1.3.1"
git2 = { version = "0.20.2", default-features = false }
goblin = "0.10.7"
glob = "0.3.3"
ignore = "0.4.24"
indicatif = "0.18.0"
lsp-server = "0.7"
lsp-types = "0.97"
moka = { version = "0.12.11", features = ["sync"] }
notify = "6.1.1"
nu-ansi-term = "0.50"
once_cell = "1.21.3"
pyo3 = { version = "0.23.5", features = ["abi3-py312", "extension-module"], optional = true }
rayon = "1.10.0"
reedline = "0.49"
regex = "1.12.2"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rustc-hash = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
strsim = "0.11.1"
json-spanned-value = "0.2.2"
sha2 = "0.10.8"
toml = "0.8.23"
tempfile = "3.23.0"

# Tree-sitter policy:
# - keep one shared runtime version
# - pin each grammar crate to a known-compatible upstream release
# - grammar crate versions are intentionally not forced to match numerically,
#   because the upstream language crates are released independently
tree-sitter = "0.25.10"

# Grammars already on the current 0.25 line.
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-scala = "0.25.0"

# Grammars that still need older published releases for this port.
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-php = "0.23.11"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"
quick-xml = "0.40"
jaq-core = "3.0"
jaq-std = "3.0"
jaq-json = "2.0"
xee-xpath = "0.1.5"
xot = "0.31"
jclassfile = "0.6.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[features]
default = []
# Semantic search: voyageai/voyage-4-nano embeddings via the PyTorch SDPA sidecar.
# Opt in with `--features nlp`. Acceleration (CUDA/Metal) is selected inside the sidecar
# at runtime — no compile-time backend features needed.
nlp = ["dep:hf-hub", "dep:tokenizers", "dep:fastrq"]
# Enables the pyo3-backed Python extension module (`bifrost_searchtools._native`).
# Maturin turns this on automatically via pyproject.toml; the `bifrost` CLI
# binary builds without it on every platform.
python = ["dep:pyo3"]

[dev-dependencies]
filetime = "0.2"
pretty_assertions = "1.4.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
rusqlite_migration = "=1.3.1"

# Unix: process-group kill for the embedding sidecar (and the peak-RSS bench).
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Windows: formatter processes are born suspended, assigned to a Job Object,
# then resumed so descendants cannot escape cancellation or timeout cleanup.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }

# Full debuginfo made every dev test binary ~600 MB, so target/ grew by
# terabytes; line tables keep file/line backtraces at a fraction of the size.
# Bump back to `debug = true` locally when a real debugger session is needed.
[profile.dev]
debug = "line-tables-only"
